<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AnunciaYa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">Foto anuncio</string>
    <string name="titBuscar">Buscar productos…</string>
    <string name="descripUbicacion">Filtrar por ubicación</string>
    <string name="promptCategorias">Categorías</string>
    <string name="datAnunciante">Datos del Anunciante</string>
    <string name="comprar">Comprar</string>
    <string name="noAnuncios">Actualmente no hay anuncios disponibles…</string>
    <string name="euro">€</string>
    <string name="resumCompra">Resumen de tu compra</string>
    <string name="dirEnvio">Dirección Envio</string>
    <string name="direccion">Dirección</string>
    <string name="ciudad">Ciudad</string>
    <string name="cp">Código Postal</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="dialogElimAnuncio">¿Estás seguro de que deseas eliminar este anuncio?</string>
    <string name="editAnuncio">Editar Anuncio</string>
    <string name="modificar">Modificar</string>
    <string name="titulo">Título</string>
    <string name="titulo_">Título*</string>
    <string name="descripcion_">Descripción*</string>
    <string name="precio">Precio</string>
    <string name="precio_">Precio*</string>
    <string name="estado_">Estado*</string>
    <string name="categoria_">Categoría*</string>
    <string name="ubicacion_">Ubicacion*</string>
    <string name="modAnuncio">Modificar Anuncio</string>
    <string name="misPedidos">Mis Pedidos</string>
    <string name="ajustes">Ajustes</string>
    <string name="anunPublicados">Anuncios Publicados</string>
    <string name="noAnunComprados">No has realizado la compra de ningún producto…</string>
    <string name="noAnunVendidos">No has realizado la venta de ningún producto…</string>
    <string name="misEnvios">Mis Envios</string>
    <string name="formReg">Formulario Registro"</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_">Nombre*</string>
    <string name="apellidos">Apellidos</string>
    <string name="apellidos_">Apellidos*</string>
    <string name="nombUsu">Nombre Usuario</string>
    <string name="nombUsu_">Nombre Usuario*</string>
    <string name="fechNac">16/01/2004</string>
    <string name="fechNac_">Fecha Nacimiento*</string>
    <string name="email">Email</string>
    <string name="email_">Email*</string>
    <string name="tlf">Teléfono</string>
    <string name="tlf_">Telefono*</string>
    <string name="contraseña">Contaseña</string>
    <string name="contraseña_">Constraseña*</string>
    <string name="registrar">Registrar</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="registrate">Registrate</string>
    <string name="noCuenta">¿No tienes una cuenta?</string>
    <string name="bienvAnuncYa">Bienvenido a AnunciaYa</string>
    <string name="guardCambios">Guardar Cambios</string>
    <string name="modDatosUsuario">Modificar Datos Usuario</string>
    <string name="anuncio">Anuncio</string>
    <string name="addAnuncio">Añadir Anuncio</string>
    <string name="addFoto">Añadir Foto</string>
    <string name="delFoto">Eliminar Foto</string>
    <string name="fotos_">Fotos*</string>
    <string name="crearAnuncio">Crear Anuncio</string>
</resources>